change cmake to work with apple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,16 @@ project (camera-multitouch)
 find_package(OpenCV REQUIRED)
 set(LIBS ${LIBS} ${OpenCV_LIBS})
 
-find_package(X11)
-set(LIBS ${LIBS} ${X11_LIBRARIES})
+set(SRC ${SRC} main.cpp)
 
-add_executable(camera-multitouch main.cpp input_x11.cpp)
+IF (APPLE)
+  set(SRC ${SRC} input_osx.cpp)
+ELSE()
+  find_package(X11)
+  set(LIBS ${LIBS} ${X11_LIBRARIES})
+  set(SRC ${SRC} input_x11.cpp)
+ENDIF()
+
+add_executable(camera-multitouch ${SRC})
 target_link_libraries(camera-multitouch ${LIBS})
 
