--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBS ${LIBS} ${OpenCV_LIBS})
 set(SRC ${SRC} main.cpp)
 
 IF (APPLE)
+  set(CMAKE_EXE_LINKER_FLAGS "-framework Foundation -framework CoreGraphics")
   set(SRC ${SRC} input_osx.cpp)
 ELSE()
   find_package(X11)
