--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SRC ${SRC} main.cpp)
 
 IF (APPLE)
   set(CMAKE_EXE_LINKER_FLAGS 
-    "-framework CoreGraphics -framework ApplicationServices")
+    "-framework Foundation -framework CoreGraphics -framework ApplicationServices")
   set(SRC ${SRC} input_osx.cpp)
 ELSE()
   find_package(X11)
